# biglinux-webapps

./: .deepsource.toml  .gitignore  AGENTS.md  Cargo.toml  PLANNING.md  README.md  browsr.sh  flake.nix  gettext_po_generator_github.sh  index.html  ruff.toml
.github/workflows/: build-package.yml  translate-and-build-package.yml
.serena/: project.yml
biglinux-webapps/DEBIAN/: biglinux-webapps.pot  control  en.po  es.po  languages  md5sums  postinst
biglinux-webapps/locale/: bg.json  bg.po  biglinux-webapps-tmp.pot  biglinux-webapps.pot  cs.json  cs.po  da.json  da.po  de.json  de.mo  de.po  el.json  el.po  en.json  en.po  es.json  es.po  et.json  et.po  fi.json  fi.po  fr.json  fr.po  he.json  he.po  hr.json  hr.po  hu.json  hu.po  is.json  is.po  it.json  it.po  ja.json  ja.po  ko.json  ko.po  nl.json  nl.po  no.json  (+21 more)
biglinux-webapps/usr/share/applications/: big-webapps-gui.desktop  big-webapps.desktop  (+2 more)
crates/webapps-core/: Cargo.toml
crates/webapps-core/src/: browsers.rs  config.rs  desktop.rs  i18n.rs  lib.rs
crates/webapps-core/src/desktop/: builder.rs  mod.rs  paths.rs  sanitize.rs  wm_class.rs
crates/webapps-core/src/models/: browser.rs  mod.rs  webapp.rs
crates/webapps-core/src/models/webapp/: collection.rs  entry.rs  mod.rs
crates/webapps-core/src/models/webapp/types/: app_mode.rs  categories.rs  identifiers.rs  mod.rs  url.rs  validate.rs
crates/webapps-core/src/templates/: communication.rs  google.rs  media.rs  mod.rs  office365.rs  productivity.rs  registry.rs
crates/webapps-exec/: Cargo.toml
crates/webapps-exec/src/: icon.rs  launch.rs  main.rs  wayland.rs
crates/webapps-manager/: Cargo.toml
crates/webapps-manager/src/: browser_dialog.rs  favicon.rs  geometry.rs  lib.rs  main.rs  service.rs  style.rs  template_gallery.rs  ui_async.rs  webapp_dialog.rs  webapp_row.rs  welcome_dialog.rs  window.rs
crates/webapps-manager/src/favicon/: download.rs  html.rs  mod.rs
crates/webapps-manager/src/service/: browser.rs  icons.rs  io.rs  migration.rs  mod.rs  repository.rs  welcome.rs
crates/webapps-manager/src/service/crud/: helpers.rs  mod.rs  operations.rs
crates/webapps-manager/src/service/migration/: mod.rs  parse.rs  shell.rs
crates/webapps-manager/src/webapp_dialog/: mod.rs  tasks.rs  validation.rs
crates/webapps-manager/src/webapp_dialog/handlers/: fields.rs  lifecycle.rs  media.rs  mod.rs
crates/webapps-manager/src/webapp_dialog/ui/: mod.rs  shell.rs
crates/webapps-manager/src/webapp_dialog/ui/sections/: appearance.rs  behavior.rs  mod.rs  website.rs
crates/webapps-manager/src/window/: context.rs  list.rs  mod.rs  shortcuts.rs  shortcuts_window.rs  state.rs  ui.rs
crates/webapps-manager/src/window/actions/: about.rs  browse.rs  import_export.rs  mod.rs  remove_all.rs  remove_multiple.rs
crates/webapps-manager/tests/: crud_integration.rs
crates/webapps-viewer/: Cargo.toml
crates/webapps-viewer/src/: main.rs  window.rs
crates/webapps-viewer/src/window/: chrome.rs  context_menu.rs  geometry.rs  mod.rs  session.rs  settings.rs  shortcuts_window.rs
crates/webapps-viewer/src/window/downloads/: connect.rs  mod.rs
crates/webapps-viewer/src/window/navigation/: fullscreen.rs  mod.rs  url_entry.rs  webview.rs
crates/webapps-viewer/src/window/permissions/: connect.rs  mod.rs
crates/webapps-viewer/src/window/shortcuts/: mod.rs  webview_actions.rs  window_actions.rs  zoom_actions.rs
packaging/arch/: PKGBUILD  biglinux-webapps.install
packaging/flatpak/: br.com.biglinux.webapps.yml  generate-cargo-sources.sh
pkgbuild/: PKGBUILD  biglinux-webapps.install
po/: POTFILES  bg.po  biglinux-webapps.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt-BR.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
scripts/: update-translations.sh  validate-customizations.sh
(+560 files in other folders)
