[package]
name = "webapps-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true
dirs.workspace = true
url.workspace = true
gettextrs.workspace = true
toml.workspace = true
