[package]
name = "webapps-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "webapps_manager"
path = "src/lib.rs"

[[bin]]
name = "big-webapps-gui"
path = "src/main.rs"

[dependencies]
webapps-core = { path = "../webapps-core" }
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
gdk-pixbuf.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
dirs.workspace = true
reqwest.workspace = true
scraper.workspace = true
image.workspace = true
url.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
open = "5"
async-channel = "2"
fs2 = "0.4"
gettextrs.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test = "3"
